<resources>
    <string name="novel_app_name">Novel</string>

    <string name="novel_brightness_system">系统</string>

    <string name="novel_font_plus">Aa+</string>
    <string name="novel_font_minus">Aa-</string>

    <string name="novel_font_size_default">默认</string>

    <string name="novel_page_turning_simulation">仿真</string>
    <string name="novel_page_turning_cover">覆盖</string>
    <string name="novel_page_turning_slide">滑动</string>
    <string name="novel_page_turning_roll">滚动</string>
    <string name="novel_page_turning_none">无</string>

    <string name="novel_subscribe_book">加入书架</string>
    <string name="novel_read">开始阅读</string>

    <string name="novel_last_chapter">上一章</string>

    <string name="novel_next_chapter">下一章</string>
    <string name="novel_book_menu">目录</string>

    <string name="novel_background">背景</string>

    <string name="novel_night">夜间</string>
    <string name="novel_day">日间</string>
    <string name="novel_setting">设置</string>

    <string name="novel_dialog_message_add_shelf">是否加入书架</string>
    <string name="novel_import_books">导入</string>
    <string name="novel_book_imported">已导入</string>
</resources>
