<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color3C4044"
    android:orientation="vertical"
    android:padding="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivReadSettingBrightnessMinus"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:scaleType="center"
            android:background="@drawable/novel_ic_brightness" />

        <SeekBar
            android:id="@+id/sbReadSettingBrightness"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:max="255"
            android:maxHeight="3dp"
            android:minHeight="3dp"
            android:progressDrawable="@drawable/novel_seekbar_bg"
            android:thumb="@drawable/novel_seekbar_thumb"
            android:thumbOffset="10dp" />

        <ImageView
            android:id="@+id/ivReadSettingBrightnessplus"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="20dp"
            android:scaleType="center"
            android:background="@drawable/novel_ic_brightness" />


        <CheckBox
            android:id="@+id/cbReadSettingAuto"
            android:layout_width="50dp"
            android:layout_height="35dp"
            android:background="@drawable/novel_selector_read_setting"
            android:button="@null"
            android:gravity="center"
            android:text="@string/novel_brightness_system"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvReadSettingFontMinus"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:background="@drawable/novel_shape_bg_read_setting_normal"
            android:gravity="center"
            android:text="@string/novel_font_minus"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvReadSettingFontSize"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:text="15" />

        <TextView
            android:id="@+id/tvReadSettingFontPlus"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/novel_shape_bg_read_setting_normal"
            android:gravity="center"
            android:text="@string/novel_font_plus"
            android:textColor="@color/white"
            android:textSize="18sp" />


        <CheckBox
            android:id="@+id/cbReadSettingFontAuto"
            android:layout_width="50dp"
            android:layout_height="35dp"
            android:background="@drawable/novel_selector_read_setting"
            android:button="@null"
            android:gravity="center"
            android:text="@string/novel_font_size_default"
            android:textColor="@color/white" />

    </LinearLayout>

    <RadioGroup
        android:id="@+id/read_setting_rg_page_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/read_setting_rb_simulation"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginEnd="18dp"
            android:layout_weight="1"
            android:background="@drawable/novel_selector_read_setting"
            android:button="@null"
            android:gravity="center"
            android:text="@string/novel_page_turning_simulation"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/read_setting_rb_cover"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginEnd="18dp"
            android:layout_weight="1"
            android:background="@drawable/novel_selector_read_setting"
            android:button="@null"
            android:gravity="center"
            android:text="@string/novel_page_turning_cover"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/read_setting_rb_slide"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginEnd="18dp"
            android:layout_weight="1"
            android:background="@drawable/novel_selector_read_setting"
            android:button="@null"
            android:gravity="center"
            android:text="@string/novel_page_turning_slide"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:visibility="gone" />

        <RadioButton
            android:id="@+id/read_setting_rb_scroll"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginEnd="18dp"
            android:layout_weight="1"
            android:background="@drawable/novel_selector_read_setting"
            android:button="@null"
            android:gravity="center"
            android:text="@string/novel_page_turning_roll"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/read_setting_rb_none"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:background="@drawable/novel_selector_read_setting"
            android:button="@null"
            android:gravity="center"
            android:text="@string/novel_page_turning_none"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </RadioGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvBgReadSetting"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="5dp"
        android:scrollbars="none" />
</LinearLayout>