<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/flContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.benyq.novel.book.page.PageView
            android:id="@+id/pageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </RelativeLayout>


    <com.benyq.common.ui.widght.HeaderView
        android:id="@+id/headerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:toolbar_style="dark"
        app:toolbar_title=""/>


    <RelativeLayout
        android:id="@+id/rlController"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/color3C4044">

        <LinearLayout
            android:id="@+id/llChapter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvLastChapter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginStart="5dp"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:text="@string/novel_last_chapter"/>

            <SeekBar
                android:id="@+id/chapterSeekBar"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/tvNextChapter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginEnd="5dp"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:text="@string/novel_next_chapter"/>
        </LinearLayout>

        <LinearLayout
            android:layout_below="@+id/llChapter"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/llBookChapter"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/ivBookShelf"
                    android:layout_width="25dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/novel_ic_menu"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:text="@string/novel_book_menu"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llTimeModel"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/ivVideo"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/novel_ic_night"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:text="@string/novel_night"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llSettings"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/ivSettings"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/novel_ic_read_settings"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:text="@string/novel_setting"/>
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</FrameLayout>